--- a/recovery/init-cwm.rc
+++ b/recovery/init-cwm.rc
@@ -61,6 +61,8 @@ on property:ro.debuggable=1
     write /sys/class/android_usb/android0/idProduct D001
     write /sys/class/android_usb/android0/functions adb
     write /sys/class/android_usb/android0/enable 1
+    # new usb stack additions
+	write /sys/class/android_usb/f_adb/on 1
     write /sys/class/android_usb/android0/iManufacturer $ro.product.manufacturer
     write /sys/class/android_usb/android0/iProduct $ro.product.model
     write /sys/class/android_usb/android0/iSerial $ro.serialno
