--- a/recovery/init-twrp.rc
+++ b/recovery/init-twrp.rc
@@ -13,14 +13,14 @@ on init
 
     chmod 0755 /sbin/busybox
 
+    mkdir /boot
     mkdir /sdcard
+    mkdir /sd-ext
+    mkdir /datadata
+    mkdir /emmc
     mkdir /system
     mkdir /data
-    mkdir /data/data
     mkdir /cache
-    mkdir /mtdcache
-    mkdir /devlog
-    mkdir /internal_sdcard
     mount /tmp /tmp tmpfs
 
 on boot
@@ -31,11 +31,25 @@ on boot
 
     class_start default
 
+service ueventd /sbin/ueventd
+    critical
+
 service choice_fn /sbin/choice_fn
     oneshot
 
-service power_test /sbin/power_test
+service mfgsrv /sbin/mfgsrv -i -t /dev/ttyS0
     disabled
+
+service dmesg /sbin/busybox dmesg -n 1
+    oneshot
+
+service recovery /sbin/recovery
+    disabled
+
+service adbd /sbin/adbd recovery
+    disabled
+
+service htcbatt /sbin/htcbatt
     oneshot
 
 service offmode_charging /sbin/offmode_charging
@@ -46,31 +60,19 @@ service detect_key /sbin/detect_key
     disabled
     oneshot
 
-service ueventd /sbin/ueventd
-    critical
-
-service recovery /sbin/recovery
-    disabled
-
-service adbd /sbin/adbd recovery
-    disabled
-
 # Always start adbd on userdebug and eng builds
+# In recovery, always run adbd as root.
 on property:ro.debuggable=1
     write /sys/class/android_usb/android0/enable 0
-    write /sys/class/android_usb/android0/idVendor 18D1
-    write /sys/class/android_usb/android0/idProduct D001
+    write /sys/class/android_usb/android0/idVendor 0bb4
+    write /sys/class/android_usb/android0/idProduct 0c07
     write /sys/class/android_usb/android0/functions adb
     write /sys/class/android_usb/android0/enable 1
     write /sys/class/android_usb/android0/iManufacturer $ro.product.manufacturer
     write /sys/class/android_usb/android0/iProduct $ro.product.model
     write /sys/class/android_usb/android0/iSerial $ro.serialno
-
-on property:ro.debuggable=1
     start adbd
-
-on property:ro.debuggable=0
-    stop adbd
+    setprop service.adb.root 1
 
 # Restart adbd so it can run as root
 on property:service.adb.root=1
