Move recovery files to recovery/root
PS2: Update init.recovery to fix MTP on boot and UMS

Change-Id: Id3a5b5256ddd037bbae0e6acde562830bcb69d7c

--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -5,11 +5,12 @@ on boot
     start choice_fn
     start chargeled
 
-    write /sys/class/android_usb/android0/enable 0
-    write /sys/class/android_usb/android0/functions mass_storage,adb
+    write /sys/class/android_usb/android0/idVendor 0bb4
+    write /sys/class/android_usb/android0/idProduct 0ca8
     write /sys/class/android_usb/android0/enable 1
     setprop usb.vendor 0bb4
-    setprop usb.product.adb 0ff9
+    setprop usb.product.adb 0df5
+    setprop usb.product.mass_storageadb 0ff9
     setprop usb.product.mtpadb 0ca8
 
 # Switch out fstab on jewel if unified storage is present
